--- a/private/config.yml
+++ b/private/config.yml
@@ -1,3 +1,3 @@
 
 # Configuration for CyberFiles
-# See url for documentation
+# See https://github.com/CyberGen49/CyberFiles2#cyberfiles-configuration for documentation
