--- a/private/config.yml
+++ b/private/config.yml
@@ -1,6 +1,6 @@
 
 # Configuration for CyberFiles
-# See https://github.com/CyberGen49/CyberFiles2#cyberfiles-configuration for documentation
+# See https://github.com/CyberGen49/CyberFiles2#configuration for documentation
 
 # General settings
 siteName: CyberFiles
