--- a/private/config.yml
+++ b/private/config.yml
@@ -21,7 +21,11 @@ skipFiles:
 theme:
   bg: '#000'
   bg2: "#222429"
+  fileSep: "#1a1b1d"
+  fileH: "#1f2124"
+  fileC: "#32353b"
   fg: '#fff'
   fg2: "#6f778b"
   fg2H: "#acb4c7"
+  fg3: "#64666c"
   accent: "#35486d"
