--- a/private/config.yml
+++ b/private/config.yml
@@ -15,6 +15,8 @@ hiddenFiles:
   - '_*'
   - 'conf.yml'
   - 'robots.txt'
+dateFormatShort: '%b %d, %Y'
+dateFormatFull: '%m/%d/%Y %I:%+M %p'
 
 # Colour settings
 theme:
@@ -23,6 +25,9 @@ theme:
   fileSep: "#1a1b1d"
   fileH: "#1f2124"
   fileC: "#32353b"
+  scrollbar: "#222429"
+  scrollbarH: "#3d4047"
+  scrollbarC: "#575a63"
   fg: '#fff'
   fg2: "#6f778b"
   fg2H: "#acb4c7"
