--- a/private/config.yml
+++ b/private/config.yml
@@ -22,36 +22,7 @@ hideDirWhenContains:
 headerFileName: _cf_header.md
 dateFormatShort: '%b %d, %Y'
 dateFormatFull: '%m/%d/%Y %I:%+M %p'
+upButtonInFileList: false
 
 # Colour settings
-theme:
-  bg: '#000'
-  bg2: "#222429"
-  fg: '#fff'
-  fg2: "#6f778b"
-  fg2H: "#acb4c7"
-  fg3: "#64666c"
-  accent: "#35486d"
-  fileSep: "#1a1b1d"
-  fileH: "#1f2124"
-  fileC: "#32353b"
-  fileListHeaders: +fg2
-  fileIcon: +fg2
-  fileNameCol: +fg
-  fileDateCol: +fg
-  fileDateMobile: +fg2
-  fileSizeCol: +fg
-  fileListFooter: +fg2
-  scrollbar: +bg2
-  scrollbarH: "#3d4047"
-  scrollbarC: "#575a63"
-  bgTopbar: +accent
-  fgTopbar: +fg
-  topbarBorder: rgba(0, 0, 0, 0)
-  textboxPlaceholder: +fg3
-  filterBarBottom: +bg2
-  filterBarBottomF: +accent
-  filterBarBgF: +bg2
-  filterBarText: +fg
-  loadingSpinner: +fg2
-  browserTheme: +accent
+theme: Default
