--- a/private/config.yml
+++ b/private/config.yml
@@ -34,13 +34,13 @@ videoAutoplay: true
 audioAutoplay: true
 videoProgressSave:
   enable: true
-  minDuration: 600
+  minDuration: 600 # 10 minutes
   minPercent: 10
   maxPercent: 90
-  expire: 168
+  expire: 168 # 7 days
 
 # Colour settings
 theme: Default
 
 # Other things
-version: 17
+version: 18
