--- a/private/themes/DefaultBlackout.yml
+++ b/private/themes/DefaultBlackout.yml
@@ -2,7 +2,7 @@
 # CyberFiles default AMOLED dark theme
 
 # The theme's display name
-name: CyberFiles Blackout
+name: CyberFiles Blackout (AMOLED)
 
 bg: '#000'
 bg2: "#1E1E24"
