--- a/private/themes/Default.yml
+++ b/private/themes/Default.yml
@@ -35,6 +35,7 @@ fileTypeCol: +fg2
 fileDateMobile: +fg2
 fileSizeCol: +fg2
 fileListFooter: +fg2
+bgScrollbarTrack: rgba(0, 0, 0, 0.1)
 scrollbar: +fg2
 scrollbarH: +fg
 scrollbarC: +accent
