Thumbnail generation hotfix

--- a/private/config.yml
+++ b/private/config.yml
@@ -51,7 +51,8 @@ videoProgressSave:
   prompt: true
 generateThumbs: true
 commands:
-  thumbImage: 'convert -define png:size=196x196  -background none "%0"  -thumbnail 256x256^ -gravity center  "%1"'
+  #thumbImage: 'convert -define png:size=196x196  -background none "%0"  -thumbnail 196x196^ -gravity center  "%1"'
+  thumbImage: 'convert -define png:size=196x196  -background none "%0"  -thumbnail 196x196^ -gravity center -extent 196x196  "%1"'
   thumbVideo: 'ffmpeg -i "%0" -ss 00:00:01.000 -vframes 1 "%1"'
 textPreviewMaxSize: 1000000
 shortLinkSlugLength: 8
