Added more hidden file patterns

--- a/private/config.yml
+++ b/private/config.yml
@@ -14,6 +14,8 @@ theme: Default
 hiddenFiles:
   - '*.php'
   - 'index.html'
+  - 'desktop.ini'
+  - 'System Volume Information'
   - '.*'
   - '_*'
 hideDirWhenContains:
